[gd_scene load_steps=7 format=3 uid="uid://cvyjx3fc0bum0"]

[ext_resource type="Script" path="res://script/multiplayer_config_menu.gd" id="1_wcof1"]
[ext_resource type="FontFile" uid="uid://b6hvc1s7ei6uj" path="res://Font/AlimamaDongFangDaKai-Regular/AlimamaDongFangDaKai-Regular.ttf" id="2_q748o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vo8j2"]
bg_color = Color(0, 0.690196, 0.654902, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ahblv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2avh7"]
bg_color = Color(0.509804, 0.788235, 0.45098, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.811765, 0.831373, 0.45098, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yk0oh"]
bg_color = Color(0.870588, 0.72549, 0.282353, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MultiplayerConfigMenu" type="CanvasLayer"]
script = ExtResource("1_wcof1")

[node name="Background" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vo8j2")

[node name="MessageContent" type="PanelContainer" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ahblv")

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MessageContent"]
layout_mode = 2

[node name="InfoTitle" type="RichTextLabel" parent="Background/MessageContent/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_q748o")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center]Lobby[/center] "

[node name="IpContainer" type="HBoxContainer" parent="Background/MessageContent/VBoxContainer"]
layout_mode = 2

[node name="IpLabel" type="Label" parent="Background/MessageContent/VBoxContainer/IpContainer"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_q748o")
theme_override_font_sizes/font_size = 30
text = "Address"

[node name="LineEdit" type="LineEdit" parent="Background/MessageContent/VBoxContainer/IpContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "127.0.0.1"

[node name="UsernameContainer" type="HBoxContainer" parent="Background/MessageContent/VBoxContainer"]
layout_mode = 2

[node name="UsernameLabel" type="Label" parent="Background/MessageContent/VBoxContainer/UsernameContainer"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_q748o")
theme_override_font_sizes/font_size = 30
text = "Username"

[node name="LineEdit" type="LineEdit" parent="Background/MessageContent/VBoxContainer/UsernameContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
placeholder_text = "Your Username"

[node name="ButtonContainer" type="HBoxContainer" parent="Background/MessageContent/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CreateServerButton" type="Button" parent="Background/MessageContent/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_q748o")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_2avh7")
text = "Create Game"

[node name="PlaceHolderLabel" type="Label" parent="Background/MessageContent/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="JoinGameButton" type="Button" parent="Background/MessageContent/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_q748o")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_yk0oh")
text = "Join Game"

[node name="MsgLabel" type="RichTextLabel" parent="Background/MessageContent/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true

[node name="UsernameTextEdit" type="TextEdit" parent="Background"]
layout_mode = 0
offset_left = 781.0
offset_top = 551.0
offset_right = 897.0
offset_bottom = 595.0
text = "Username"

[node name="TestButton" type="Button" parent="."]
offset_right = 150.0
offset_bottom = 56.0
text = "Test Button"

[connection signal="sig_create_server" from="." to="." method="_on_sig_create_server"]
[connection signal="sig_join_game" from="." to="." method="_on_sig_join_game"]
[connection signal="pressed" from="Background/MessageContent/VBoxContainer/ButtonContainer/CreateServerButton" to="." method="_on_create_server_button_pressed"]
[connection signal="pressed" from="Background/MessageContent/VBoxContainer/ButtonContainer/JoinGameButton" to="." method="_on_join_game_button_pressed"]
[connection signal="text_changed" from="Background/UsernameTextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="TestButton" to="." method="_on_test_button_pressed"]
